# Deals

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  db.deals  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
API/: models.py  serializers.py  services.py  urls.py  views.py
API/migrations/: 0001_initial.py  0002_auto_20230907_1447.py
Deals/: asgi.py  handlers.py  settings.py  urls.py  wsgi.py
