[tool.poetry]
name = "deals"
version = "0.1.0"
description = ""
authors = ["KristinaErdman <erdmakristina8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.5"
djangorestframework = "3.12.4"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
